--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.0.1",
     "eslint-config-airbnb": "^19.0.4",
     "framer-motion": "^11.3.31",
+    "moment": "^2.30.1",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
