--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@customerio/cdp-analytics-browser": "^0.2.0",
     "@customerio/cdp-analytics-node": "^0.2.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -20,14 +21,16 @@
     "eslint-config-airbnb": "^19.0.4",
     "framer-motion": "^11.3.31",
     "moment": "^2.30.1",
-    "next": "14.2.7",
+    "next": "^14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "eslint-config-prettier": "^9.1.0",
