add contentful implementation

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.1",
+    "contentful": "^11.0.3",
     "customerio-node": "^4.1.1",
     "eslint-config-airbnb": "^19.0.4",
     "framer-motion": "^11.3.31",
