--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
