--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^6.4.0",
     "contentful": "^11.0.3",
     "customerio-node": "^4.1.1",
+    "date-fns": "^2.30.0",
     "eslint-config-airbnb": "^19.0.4",
     "framer-motion": "^11.3.31",
     "markdown-it": "^14.1.0",
@@ -26,7 +27,10 @@
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.8.1",
     "react-markdown": "^9.0.1",
+    "react-share": "^5.1.0",
+    "reading-time": "^1.5.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
