Add Contentful management utilities and Synthesis debug tools
Added the 'contentful-management' package and implemented utility functions in src/lib/contentfulManagement.ts to fetch Contentful content types and those with published entries. Updated Synthesis.tsx to use these utilities for debugging and added the SynthesisContent type. This supports improved Contentful integration and developer debugging.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.4.0",
     "contentful": "^11.0.3",
+    "contentful-management": "^11.54.0",
     "customerio-node": "^4.1.1",
     "date-fns": "^2.30.0",
     "eslint-config-airbnb": "^19.0.4",
